Fix logo position error on mobile view

--- a/public/ingress/css/main.css
+++ b/public/ingress/css/main.css
@@ -24,6 +24,7 @@ h1.site-title, h1.site-title a {
 }
 h1.site-title a {
     vertical-align: middle;
+    display: inline-block;
 }
 
 a {
